// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not render expense summary for empty list 1`] = `<div />`;

exports[`should render expense summary for multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    2
     
    expenses
     totalling 
    $12.34
  </h1>
</div>
`;

exports[`should render expense summary for one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $0.14
  </h1>
</div>
`;
